# AvigilanceEnv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  evaluate_agent.py  generate_data.py  inference.py  openenv.yaml  pyproject.toml  pytorch_agent.py  requirements-space.txt  requirements.txt  test_env.py  test_robustness.py  train.py  train_ppo.py  validate.py
.github/: copilot-instructions.md
data/: fto_profiles.json  incident_reports.json  resource_scenarios.json
environment/: avigilance_env.py  models.py  scoring.py
environment/graders/: grader1.py  grader2.py  grader3.py
environment/tasks/: task1_fto_scorer.py  task2_incident_ranker.py  task3_resource_alloc.py
scripts/: validate-submission.sh
server/: app.py
tests/: test_api_contract.py  test_inference_contract.py  test_reward_open_interval.py
walkthrough/: README.md  space-frontend.md  submission-checklist.md  verification.md
web/: app.js  index.html  styles.css
